# energetic-stress-production

./: .gitattributes  .gitignore  Anticiper la production d’énergies renouvelables et améliorer l’optimisation.pptx  LICENSE  README.md  aggregate_rte.ipynb  arpege_data_collection.py  arpege_download_history.ipynb  arpege_extract.ipynb  clean_dataset.ipynb  concat_all_tempo.ipynb  emails_newsletter.txt  modelisation.py  prediction.ipynb  pyproject.toml  rte_tempo_join.ipynb  tempo_2014_2024.csv  transform_data_RTE.ipynb
.github/workflows/: deploy.yml  page_deploy.yml
clean_datasets/: arpege_data.npz  rte_agg_daily_2014_2024.csv  rte_production.csv  solar_wind_data.csv  tempo_2014_2024.csv
data/bronze/tempo/: eCO2mix_RTE_tempo_2014-2015.xlsx  eCO2mix_RTE_tempo_2015-2016.xlsx  eCO2mix_RTE_tempo_2016-2017.xlsx  eCO2mix_RTE_tempo_2017-2018.xlsx  eCO2mix_RTE_tempo_2018-2019.xlsx  eCO2mix_RTE_tempo_2020-2021.xlsx  eCO2mix_RTE_tempo_2023-2024.xlsx
data/geo/: departements_name.yaml  france_bounds.yml  lonlat_france.npz  mask_france_departements.nc  metropole.geojson  regions_name.yml
data/gold/: our_tempo_prediction.csv  rte_daily_2014_2024.csv
data/production_prediction/: model_departements.pkl
data/silver/: all_dep_mean_temperature_2013.csv  forecasted_production.csv  forecasted_production_rte.csv  mean_daily_sun_j0.csv  mean_daily_wind_j0.csv  sun_model_2_params.csv  tempo_2014_2024.csv  wind_model_2_params.csv
data/silver/weather_forecasts/: sun_flux_downward_hourly_d0.nc  sun_flux_downward_hourly_d1.nc  sun_flux_downward_hourly_d2.nc  sun_flux_downward_hourly_d3.nc  temperature_hourly_d0.nc  temperature_hourly_d1.nc  temperature_hourly_d2.nc  temperature_hourly_d3.nc  wind_speed_hourly_d0.nc  wind_speed_hourly_d1.nc  wind_speed_hourly_d2.nc  wind_speed_hourly_d3.nc
doc/: conf.py  index.rst
doc/developer_guide/: contributing.rst
doc/getting_started/: data_sources.rst  index.rst  project_description.rst
doc/src/: energy_forecast.consumption_forecast.rst  energy_forecast.dashboard.Accueil.rst  energy_forecast.dashboard.dashboard.rst  energy_forecast.dashboard.dashboard_streamlit.rst  energy_forecast.dashboard.pages.1_Météo.rst  energy_forecast.dashboard.pages.1_weather.rst  energy_forecast.dashboard.pages.2_Production.rst  energy_forecast.dashboard.pages.2_power_generation.rst  energy_forecast.dashboard.pages.3_Consommation.rst  energy_forecast.dashboard.pages.3_consumption_prediction.rst  energy_forecast.dashboard.pages.4_Jours_Tempos.rst  energy_forecast.dashboard.pages.4_prediction_tempo.rst  energy_forecast.dashboard.pages.rst  energy_forecast.dashboard.rst  energy_forecast.energy.rst  energy_forecast.meteo.rst  energy_forecast.production_forecast.rst  energy_forecast.rst  modules.rst
doc/user_guide/: index.rst
doc/user_guide/notebooks/: 0_concat_all_tempo.ipynb  0_transform_data_RTE.ipynb  2_eolen_prediction.ipynb  3_PV_prediction.ipynb  4_recent_forecast.ipynb  5_data_pilepline.ipynb  index.ipynb  weekly_predictions_RTE.ipynb
notebooks/: 0_concat_all_tempo.ipynb  0_transform_data_RTE.ipynb  1_clean_dataset.ipynb  2_aggregate_rte.ipynb  3_rte_tempo_join.ipynb  4_stress_exploration.ipynb
notebooks/datascience/: 2_eolen_prediction.ipynb  3_PV_prediction copy.ipynb  arpege_data_collection.py  arpege_download_history.ipynb  arpege_extract.ipynb  metropole.geojson  predicting_the_predictions.ipynb  prediction.ipynb  tempo_predictor.ipynb  wind_model_2_params.csv
notebooks/datascience/arpege/: weekly_predictions_RTE.ipynb
notebooks/datascience/tempo/: exploration_tempo.ipynb
notebooks/weather/: 0_grib_to_xarray.ipynb  1_PV_prediction copy.ipynb  1_concatenate_daily_forecasts.ipynb  1_sun_prediction.ipynb  2_eolen_prediction.ipynb  2_extract_grib_to_netcfd.ipynb  3_PV_prediction copy.ipynb  3_load_and_process_netcfd.ipynb  4_recent_forecast.ipynb  all_si10_regions.parquet  all_ssrd_regions.parquet  group_by_departements.ipynb  mask_france_regions.nc  mean_forecasts.csv  sun_flux.parquet  sun_model_2_params.csv  total_ssrd_daily_exact.parquet  total_wind_10m.parquet  total_wind_10m_exact.parquet  transform_arpeg_data.py
raw_datasets/tempo/: eCO2mix_RTE_tempo_2019-2020.xlsx  eCO2mix_RTE_tempo_2021-2022.xlsx  eCO2mix_RTE_tempo_2022-2023.xlsx
scripts/: 0_concat_RTE.py  0_concat_all_RTE.py  0_concat_tempo.py  1_RTE_tempo_join.py  2_agg_daily_rte.py  tempo_prediction.py
src/dashboard/: dashboard.py  energy.py  meteo.py
src/energy_forecast/: __init__.py  constants.py  consumption_forecast.py  eco2mix.py  energy.py  enr_production_model.py  geography.py  meteo.py  performances.py  production_forecast.py  rte_api_core.py  tempo_rte.py  test.ipynb
src/energy_forecast/dashboard/: Accueil.py  dashboard.py  dashboard_streamlit.py  emails.py
src/energy_forecast/dashboard/pages/: 1_Météo.py  1_weather.py  2_Production.py  2_power_generation.py  3_Consommation.py  (+4 more)
src/webapp/core/: cron.py  models.py  views.py
src/webapp/webapp/: settings.py  urls.py
tests/: test_rte_api.py
(+5 files in other folders)
